# dictify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  doc.pip  doc.py  doc.sh  docs.pip  docs.py  docs.sh  mkdocs.yml  package.json  pyproject.toml  readme.md  setup.cfg  setup.py  versions.json
4.0.0/: index.html  index.md  sitemap.xml
4.0.0/guide/field-api/: index.html
4.0.0/guide/usage/: index.html
4.0.0/guide/validation-recipes/: index.html
4.0.0/search/: search_index.json
4.0.1/: index.html  index.md  sitemap.xml
4.0.1/asset/: version-ui.css  version-ui.js
4.0.1/guide/: ai-skill.md  field-api.md  validation-recipes.md
4.0.1/guide/ai-skill/: index.html
4.0.1/guide/field-api/: index.html
4.0.1/guide/usage/: index.html
4.0.1/guide/validation-recipes/: index.html
4.0.1/search/: search_index.json
dev/: __init__.py
dev/cli/: __init__.py  __main__.py  ai.py  build.py  common.py  docs.py  publish.py
dictify/: __init__.py  test.py
docs/: _base.html  base.css  base.css.map  base.js  base.js.map  conf.py  guide.md  index.css  index.css.map  index.html  index.rst  reference.rst  sidebar.md
docs-overrides/: main.html
docs-overrides/templates/: header.html
docs-src/: _base.html  _break-point.scss  _head.html  _mixin.scss  _theme.scss  _ui-mixin.scss  base.js  base.scss  build.py  docs.py  gulpfile.js  index.html  index.html.md  index.md  index.scss  package.json  sidebar.md
docs-src/asset/: home.css  version-ui.js
docs-src/asset/icon/brand/: Read Me.txt  demo-external-svg.html  demo.html  selection.json
docs-src/bits-ui/: _color.styl  _require.styl  bits-ui.styl
docs-src/guide/: field-api.html  field-api.html.md  field-api.md  model-and-field.html  model-and-field.html.md  usage.html  usage.html.md  usage.md  validation-recipes.html  validation-recipes.html.md  validation-recipes.md
docs-src/template/: base.html  base.styl  index.html
docs-src/template/index/: body.md
docs-src/ui/sidebar/: _sidebar.html  sidebar.js  sidebar.md  sidebar.scss
docs/asset/icon/brand/: demo-external-svg.html  demo.html  svgxuse.js  svgxuse.js.map
docs/guide/: field-api.html  model-and-field.html  usage.html  validation-recipes.html
docs/source/: api.rst  conf.py  docstring.rst  field-and-model.rst  field-api.rst  guide.md  index.rst  model-and-field.rst  reference.rst  usage.rst  validations.rst
docs/source/_static/bits-ui/: bits-ui.css
docs/source/bits-ui/: _typography.styl  _ui.styl  bits-ui.styl  default.styl  typography.styl
docs/static/bits-ui/: bits-ui.css
docs/static/lib/bits-ui/: bits-ui.css  bits-ui.css.map  bits-ui.js  bits-ui.js.map  bits-ui.min.css  bits-ui.min.css.map  normalize.css  normalize.css.map
docs/static/template/: base.css
docs/ui/sidebar/: sidebar.css  sidebar.css.map  sidebar.js  sidebar.js.map  sidebar.md
sphinx-doc/: conf.py  index.rst
sphinx-doc/source/: conf.py  index.rst
src/dictify/: __init__.py  _field.py  _model.py  _sentinel.py  _types.py  _utils.py
src/dictify/ai_skills/dictify-usage/: SKILL.md
src/dictify/ai_skills/dictify-usage/agents/: openai.yaml
src/dictify/ai_skills/dictify-usage/references/: field-api.md  index.md  usage.md  validation-recipes.md
src/dictify/cli/: __init__.py  dictify.py
tests/: test_dictify.py
