[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "dictify"
version = "3.2.3.dev0"
description = "Documents schema and data validation"
readme = "readme.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nitipit Nontasuwan", email = "nitipit@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://nitipit.github.io/dictify/"
"Bug Tracker" = "https://github.com/nitipit/dictify/issues"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff",
    "ty",
]
docs = [
    "click==8.1.8; python_version < '3.10'",
    "click==8.2.1; python_version >= '3.10'",
    "mkdocs>=1.6",
    "mkdocs-shadcn>=0.10.3",
    "Pygments>=2.19",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
