[metadata]
name = dictify
version = 3.1.3
author = Nitipit Nontasuwan
author_email = nitipit@gmail.com
description = Documents schema and data validation
long_description = file: docs-src/index.html.md
long_description_content_type = text/markdown
url = https://nitipit.github.io/dictify/
project_urls =
    Bug Tracker = https://github.com/nitipit/dictify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = dictify
python_requires = >=3.6